# comm_pipeline

./: CMakeLists.txt  README.md  package.xml
include/comm_pipeline/: phase.h  phase_manager.h  planner.h  scanner.h  timer.h
launch/: cmd_test.launch  mode_test.launch  planner.launch
param/: planner_params.yaml
src/: cmd_test.cpp  comm_pipeline.cpp  comm_pipeline.h  marker.cpp  mode_test.cpp  phase.cpp  phase_deliver.cpp  phase_detected.cpp  phase_ended.cpp  phase_lost.cpp  phase_manager.cpp  phase_scan.cpp  phase_visual_servo.cpp  planner.cpp  planner.h  planner_node.cpp  scanner.cpp  service_client.cpp  service_server.cpp
srv/: ActivateStag.srv  FoundMarker.srv  GetTarget.srv
test/: fake_marker.cpp  service_client.cpp  service_server.cpp
